--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -33,109 +33,157 @@
                     </a>
                 </div>
                 <div class="col-12 col-md-9  col-sm-12">
-                    <h4 class="footer-title-color fs-5 pb-3">CÁC CƠ SỞ CỦA CAO ĐẲNG PHỔ THÔNG</h4>
+                 
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-4">
+                            <h4 class="footer-title-color fs-5 pb-3">KHU VỰC MIỀN BẮC</h4>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở Hà Nội</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Hà Nội</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Thái Nguyên</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Bắc Giang</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Hải Phòng</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Hà Nam</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Vĩnh Phúc</h6>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-4">
+                            <h4 class="footer-title-color fs-5 pb-3">KHU VỰC MIỀN TRUNG</h4>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Thanh Hóa</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Huế</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Đà Nẵng</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Bình Định</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Quảng Nam</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Nghệ An</h6>
                             </div>
                             <div>
-                                <h6 class="d-flex align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                    class="bi bi-geo-alt-fill footer-title-color " viewBox="0 0 16 16">
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
                                 </svg>Cơ sở tại Tây Nguyên</h6>
                             </div>
+                        </div>
+                        <div class="col-4">
+                            <h4 class="footer-title-color fs-5 pb-3">KHU VỰC MIỀN NAM</h4>
+                            <div>
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                                </svg>Cơ sở tại Bình Dương</h6>
+                            </div>
+                            <div>
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                                </svg>Cơ sở tại Bình Phước</h6>
+                            </div>
+                            <div>
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                                </svg>Cơ sở tại Đồng Nai</h6>
+                            </div>
+                            <div>
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                                </svg>Cơ sở tại Cần Thơ</h6>
+                            </div>
+                            <div>
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                                </svg>Cơ sở tại TP. Hồ Chí Minh</h6>
+                            </div>
+                            <div>
+                                  <h6 class="d-flex text-white align-items-center"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                    class="bi bi-geo-alt-fill footer-title-color me-2" viewBox="0 0 16 16">
+                                    <path
+                                        d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                                </svg>Cơ sở tại Bà Rịa – Vũng Tàu</h6>
+                            </div>
+                        
                         </div>
                     </div>
                 </div>
