--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -3,7 +3,7 @@
         <footer>
             <div class="row pt-5 pb-2">
                 <div class="col-12 col-md-3 col-sm-12 ">
-                    <a href="" class="navbar-brand">
+                    <a href="#" (click)="preventDefault($event)" class="navbar-brand">
                         <span>
                             <img src="./../assets/img/loginpng.png" alt="" class="" style="height:80px">
                         </span>
