--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -16,17 +16,17 @@
         <!--            </option>-->
         <!--          </select>-->
         <!--        </div>-->
-        <div class="form-group mb-3">
+        <!-- <div class="form-group mb-3">
           <select name="campus_code" id="" class="form-select" formControlName="campus_code">
             <option value="">Lựa chọn cơ sở</option>
             <option value="1">
               CĐ Hà Nội
             </option>
           </select>
-        </div>
+        </div> -->
    
 
-        <div class="form-group mb-3">
+        <!-- <div class="form-group mb-3">
           <select name="accountEmail" id="" class="form-select" formControlName="accountEmail">
             <option value="">Chọn tài khoản</option>
             <option value="anhltpph45144@fpt.edu.vn">
@@ -45,12 +45,12 @@
               Le Thi Phuong Anh (FPL HN)
             </option>
           </select>
-        </div>
+        </div> -->
         <!-- href="javascript:;" -->
-        <button
+        <!-- <button
                 class="btn_login-google tw-mb-5 border-0 w-100 text-decoration-none d-flex align-items-center shadow-none" (click)="loginWithFake()">
           <span class="">Đăng nhập</span>
-        </button>
+        </button> -->
         <!-- <button type="button" class="btn_login-google border-0 w-100 text-decoration-none d-flex align-items-center shadow-none" (click)="loginWithGoogle()">
           <span class="">Google</span>
         </button> -->
