--- a/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
+++ b/src/app/pages/capacity-exam-new/capacity-exam-new.component.html
@@ -117,7 +117,7 @@
   
           <div class="col col-12 col-md-9 question__content">
             <ul class="question__content-list">
-              <div [id]="'question-' + i"  class="question__content-item" *ngFor="let question of fakeQuestionData; let i = index" #questions >
+              <div  class="question__content-item" *ngFor="let question of fakeQuestionData; let i = index" #questions  [id]="'question-' + i" >
                 <span class="question__content-item-num d-block">Câu {{ i + 1 }}:</span>
                 <!-- [appMath]="" -->
                 <!-- | replaceContent: question.images -->
