--- a/src/app/component/semeter/semeter.component.html
+++ b/src/app/component/semeter/semeter.component.html
@@ -3,28 +3,27 @@
       <a class="capacity__related-content-title-link">
         <h2 class="capacity__related-content-title">{{ SemeterItem.name }}</h2>
       </a>
-  
+
       <ul class="capacity__related-content-list">
         <li class="capacity__related-content-list-item">
           <div class="capacity__related-content-list-item-icon">
             <i class="fa-solid fa-file-pen"></i>
           </div>
-  
+
           {{  SemeterItem.total_poetry }} bài thi
         </li>
-    
+
       </ul>
-  
+
       <ul class="capacity__related-countdown">
         <li class="capacity__related-countdown-item text-center">
             <span class="capacity__related-countdown-item-text">Thời gian bắt đầu</span>
           <div class="capacity__related-countdown-item-box">
-            {{ SemeterItem.start_time }}
+            {{ SemeterItem.start_time | date: 'dd-MM-yyyy' }}
           </div>
         </li>
       </ul>
-  
+
       <button class="btn btn-register capacity__related-content-btn" (click)="handleGotoPoetry(SemeterItem.id)" [disabled]="SemeterItem.status === 0 ">Vào kỳ thi</button>
     </div>
   </div>
-  
