--- a/src/app/pages/test-capacity/test-capacity.component.html
+++ b/src/app/pages/test-capacity/test-capacity.component.html
@@ -2,7 +2,7 @@
   <div class="container py-4">
     <div class="">
       <div class="pb-4">
-        <a routerLink="" class="router--home">Trang chủ</a> <span class="router--index"> / Danh sách bài thi</span>
+        <a routerLink="" class="router--home">Trang chủ</a> <span class="router--index"> / Danh sách kỳ thi</span>
       </div>
 <!--      <div class="">-->
 <!--        <img class="banner"-->
@@ -12,7 +12,7 @@
     </div>
     <div class="">
       <div class="">
-        <h2 class="!tw-font-bold tw-text-lg !tw-my-4">Bài kiểm tra</h2>
+        <h2 class="!tw-font-bold tw-text-lg !tw-my-4">Kỳ kiểm tra</h2>
       </div>
 <!--      <div class="tw-grid tw-grid-cols-4 tw-justify-between tw-items-center tw-mb-5">-->
 <!--        <div class="tw-col-span-3 tw-space-x-2 tw-space-y-4">-->
