change validate form login

--- a/src/app/auth/login_v2/login.component.html
+++ b/src/app/auth/login_v2/login.component.html
@@ -37,10 +37,10 @@
                             *ngIf="userForm.get('email')?.hasError('required') && userForm.get('email')?.touched">
                             Email bắt buộc nhập
                         </p>
-                        <p class="text-danger mt-1"
+                        <!-- <p class="text-danger mt-1"
                             *ngIf="userForm.get('email')?.hasError('emailDomain') && userForm.get('email')?.invalid && userForm.get('email')?.touched">
                             Email phải từ domain @fpt.edu.vn hoặc @fe.edu.vn
-                        </p>
+                        </p> -->
                     </div>
 
                     <!-- Password input -->
