--- a/src/app/auth/login_v2/login.component.html
+++ b/src/app/auth/login_v2/login.component.html
@@ -12,18 +12,13 @@
                     <a href="" class="">
                         <img class="mb-5 logo_go-img w-50 mx-auto" src="../../../assets/img/logo.png" alt="">
                     </a>
-                    <div class="d-flex align-items-center justify-content-center">
-                        <!-- <p class="lead fw-normal mb-0 me-2">Đăng nhập với</p> -->
-                        <!-- <button type="button" id="button_login_gg" class="btn btn-floating mx-1"
-                            [disabled]="disabledButton">
-                            <i class="fab fa-google"></i> Google
-                        </button> -->
+                    <!-- <div class="d-flex align-items-center justify-content-center">
                         <asl-google-signin-button theme="filled_blue" width="400" type='standard'
                                     size='large'></asl-google-signin-button>
-                    </div>
+                    </div> -->
 
                     <div class="divider d-flex align-items-center my-4">
-                        <p class="text-center fw-bold mx-3 mb-0">Hoặc</p>
+                        <p class="text-center fw-bold mx-3 mb-0">Đăng nhập tài khoản</p>
                     </div>
 
                     <!-- Email input -->
